--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/vercel": "^3.3.0",
+    "@auth/core": "^0.7.1",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
+    "astro": "^2.3.4",
+    "auth-astro": "^3.0.0",
+    "nodemailer": "^6.9.1"
+  },
+  "devDependencies": {
+    "prisma": "^4.13.0"
   }
 }
